arr/sabnzbd/sabnzbd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: arr
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
      app.kubernetes.io/part-of: arr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd
        app.kubernetes.io/part-of: arr
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: sabnzbd
          image: linuxserver/sabnzbd:4.5.1
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          nfs:
            path: /export/Kubernetes/arr/sabnzbd
            server: 192.168.86.107
        - name: downloads
          nfs:
            path: /export/Media/Downloads/SABnzbd
            server: 192.168.86.107
