arr/sabnzbd/sabnzbd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: arr
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/part-of: arr
    app.kubernetes.io/managed-by: kubectl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.flexflix.top`)
      kind: Rule
      services:
        - name: sabnzbd
          port: 8080
      middlewares:
        - name: authentik
          namespace: authentik
